@@ -1,5 +1,11 @@
 2008-03-29  David A. Capello  <dacap@users.sourceforge.net>
 
+	* src/modules/tools.c (ink_hline[124]_soften): Fixed to support
+	tiled mode.
+
+	* src/effect/effect.h (GET_MATRIX_DATA): Modified so it can be
+	used in soften-ink.
+
 	* src/file/format_options.c: Renamed filedata to format_options.
 
 	* src/file/jpeg_format.c (getdata_JPEG): Added from configure_jpeg.
